# task-champion-swift

taskchampion-swift/: .gitignore  Cargo.toml  build-rust.sh
taskchampion-swift/src/: lib.rs
taskchampion-swift/taskchampion-swift/: Package.swift
taskchampion-swift/taskchampion-swift/RustXcframework.xcframework/: Info.plist
taskchampion-swift/taskchampion-swift/RustXcframework.xcframework/ios-arm64/Headers/: module.modulemap  taskchampion-swift.h
taskchampion-swift/taskchampion-swift/RustXcframework.xcframework/ios-arm64_x86_64-simulator/Headers/: taskchampion-swift.h
taskchampion-swift/taskchampion-swift/RustXcframework.xcframework/macos-arm64_x86_64/Headers/: taskchampion-swift.h
taskchampion-swift/taskchampion-swift/Sources/Taskchampion/: taskchampion-swift.swift
taskchampion-swiftbridge/: taskchampion_swiftbridge.h
taskchampion-swiftbridge.xcodeproj/: project.pbxproj
taskchampion-swiftbridgeTests/: taskchampion_swiftbridgeTests.swift
